--- a/worker/jarvistradutorworker/requirements.txt
+++ b/worker/jarvistradutorworker/requirements.txt
@@ -18,3 +18,6 @@ pysbd==0.3.4
 python-multipart  # upload de arquivos no FastAPI
 pydantic==2.8.2   # já vem com FastAPI, mas explicitado
 pydantic-settings==2.4.0
+
+sentence-transformers>=2.2.2
+langdetect>=1.0.9
