--- a/backend/jarvistradutorbackend/src/main/resources/application.yaml
+++ b/backend/jarvistradutorbackend/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ spring:
   # JPA/Hibernate
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     open-in-view: false
     show-sql: false
     properties:
