--- a/backend/jarvistradutorbackend/pom.xml
+++ b/backend/jarvistradutorbackend/pom.xml
@@ -105,6 +105,13 @@
             <artifactId>opennlp-uima</artifactId>
             <version>2.3.3</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
